--- a/OOPs session 2.ipynb
+++ b/OOPs session 2.ipynb
@@ -9,13 +9,13 @@
     "#Constructor (__init__)\n",
     "#destructor\n",
     "#class method vs static mehod vs normal method\n",
-    "\n",
     "#inheritance\n",
     "#overrding\n",
     "#Diamond shape probelm\n",
     "#abstract class abstract method\n",
-    "#encapsulation\n",
-    "#ploymophism"
+    "#ploymophism\n",
+    "\n",
+    "#encapsulation"
    ]
   },
   {
@@ -379,6 +379,524 @@
    "source": [
     "#https://www.geeksforgeeks.org/inheritance-in-python/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object1 call method1 from parent1\n",
+      "object2 call method2 from parent2\n",
+      "object3 call method3 from child\n",
+      "object3 call method2 from parent2\n",
+      "object3 call method1 from parent1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Multiple inheritance\n",
+    "\n",
+    "#for single child multiple parent\n",
+    "#for single derived class ... multiple base classes\n",
+    "\n",
+    "\n",
+    "class parent1:\n",
+    "    var1 = \"rrrr\"\n",
+    "    var2 = \"rrr@gmail.com\"\n",
+    "    \n",
+    "    def method1(self):\n",
+    "        return \"method1 from parent1\"\n",
+    "    \n",
+    "class parent2:\n",
+    "    var3 = \"bbbb\"\n",
+    "    var4 = \"bbb@gmail.com\"\n",
+    "    \n",
+    "    def method2(self):\n",
+    "        return \"method2 from parent2\"\n",
+    "    \n",
+    "class child(parent1, parent2):\n",
+    "    var5 = \"cccc\"\n",
+    "    var6 = \"cccc@gmail.com\"\n",
+    "    \n",
+    "    def method3(self):\n",
+    "        return \"method3 from child\"\n",
+    "    \n",
+    "    \n",
+    "obj1 = parent1()\n",
+    "print(\"object1 call\",obj1.method1())\n",
+    "\n",
+    "obj2 = parent2()\n",
+    "print(\"object2 call\",obj2.method2())\n",
+    "\n",
+    "obj3 = child()\n",
+    "print(\"object3 call\",obj3.method3())\n",
+    "print(\"object3 call\",obj3.method2())\n",
+    "print(\"object3 call\",obj3.method1())\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object1 call method1 from parent\n",
+      "object2 call method2 from child1\n",
+      "object2 call method1 from parent\n",
+      "object3 call method3 from child2\n",
+      "object3 call method1 from parent\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Hierarchical Inheritance\n",
+    "\n",
+    "#Single parent class for multiple children\n",
+    "\n",
+    "\n",
+    "class parent:\n",
+    "    var1 = \"rrrr\"\n",
+    "    var2 = \"rrr@gmail.com\"\n",
+    "    \n",
+    "    def method1(self):\n",
+    "        return \"method1 from parent\"\n",
+    "    \n",
+    "class child1(parent):\n",
+    "    var3 = \"bbbb\"\n",
+    "    var4 = \"bbb@gmail.com\"\n",
+    "    \n",
+    "    def method2(self):\n",
+    "        return \"method2 from child1\"\n",
+    "    \n",
+    "class child2(parent):\n",
+    "    var5 = \"cccc\"\n",
+    "    var6 = \"cccc@gmail.com\"\n",
+    "    \n",
+    "    def method3(self):\n",
+    "        return \"method3 from child2\"\n",
+    "    \n",
+    "    \n",
+    "obj1 = parent()\n",
+    "print(\"object1 call\",obj1.method1())\n",
+    "\n",
+    "obj2 = child1()\n",
+    "print(\"object2 call\",obj2.method2())\n",
+    "print(\"object2 call\",obj2.method1())\n",
+    "\n",
+    "obj3 = child2()\n",
+    "print(\"object3 call\",obj3.method3())\n",
+    "print(\"object3 call\",obj3.method1())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object1 call method1 from grand parent\n",
+      "object2 call method2 from parent\n",
+      "object2 call method1 from grand parent\n",
+      "object3 call method3 from child\n",
+      "object3 call method2 from parent\n",
+      "object3 call method1 from grand parent\n"
+     ]
+    }
+   ],
+   "source": [
+    "#multi level inheritance\n",
+    "\n",
+    "#grandparent ===> parent  ===> child\n",
+    "\n",
+    "class grandparent:\n",
+    "    var1 = \"rrrr\"\n",
+    "    var2 = \"rrr@gmail.com\"\n",
+    "    \n",
+    "    def method1(self):\n",
+    "        return \"method1 from grand parent\"\n",
+    "    \n",
+    "class parent(grandparent):\n",
+    "    var3 = \"bbbb\"\n",
+    "    var4 = \"bbb@gmail.com\"\n",
+    "    \n",
+    "    def method2(self):\n",
+    "        return \"method2 from parent\"\n",
+    "    \n",
+    "class child(parent):\n",
+    "    var5 = \"cccc\"\n",
+    "    var6 = \"cccc@gmail.com\"\n",
+    "    \n",
+    "    def method3(self):\n",
+    "        return \"method3 from child\"\n",
+    "    \n",
+    "    \n",
+    "obj1 = grandparent()\n",
+    "print(\"object1 call\",obj1.method1())\n",
+    "\n",
+    "obj2 = parent()\n",
+    "print(\"object2 call\",obj2.method2())\n",
+    "print(\"object2 call\",obj2.method1())\n",
+    "\n",
+    "\n",
+    "obj3 = child()\n",
+    "print(\"object3 call\",obj3.method3())\n",
+    "print(\"object3 call\",obj3.method2())\n",
+    "print(\"object3 call\",obj3.method1())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hybrid\n",
+    "\n",
+    "#Exercise\n",
+    "\n",
+    "#combination more than two types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "method1 from child\n"
+     ]
+    }
+   ],
+   "source": [
+    "#method overriding\n",
+    "\n",
+    "class parent:\n",
+    "    var1 = \"rrrr\"\n",
+    "    var2 = \"rrr@gmail.com\"\n",
+    "    \n",
+    "    def method1(self):\n",
+    "        return \"method1 from parent\"\n",
+    "    \n",
+    "class child(parent):\n",
+    "    var3 = \"cccc\"\n",
+    "    var4 = \"cccc@gmail.com\"\n",
+    "    \n",
+    "    def method1(self):\n",
+    "        return \"method1 from child\"\n",
+    "\n",
+    "obj1 = child()\n",
+    "print(obj1.method1()) #child will get priority over parent whenever same method available in parent and child\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class cls1:\n",
+    "    def method1(self):\n",
+    "        return \"method1 from cls1\"\n",
+    "\n",
+    "class cls2:\n",
+    "    def method1(self):\n",
+    "        return \"method1 from cls2\"\n",
+    "    \n",
+    "class cls3:\n",
+    "    def method1(self):\n",
+    "        return \"method1 from cls3\"\n",
+    "    \n",
+    "class cls4:\n",
+    "    def method1(self):\n",
+    "        return \"method1 from cls4\"\n",
+    "    \n",
+    "obj1 = cls1()\n",
+    "print(obj1.method1())\n",
+    "\n",
+    "obj2 = cls2()\n",
+    "print(obj2.method1())\n",
+    "\n",
+    "obj3 = cls3()\n",
+    "print(obj3.method1())\n",
+    "\n",
+    "obj4 = cls4()\n",
+    "print(obj4.method1())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "method1 from cls4\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Diamond shape probelm\n",
+    "#https://www.geeksforgeeks.org/multiple-inheritance-in-python/\n",
+    "\n",
+    "#overriding\n",
+    "\n",
+    "class cls1:\n",
+    "    def method1(self):\n",
+    "        return \"method1 from cls1\"\n",
+    "\n",
+    "class cls2(cls1):\n",
+    "    def method1(self):\n",
+    "        return \"method1 from cls2\"\n",
+    "    \n",
+    "class cls3(cls1):\n",
+    "    def method1(self):\n",
+    "        return \"method1 from cls3\"\n",
+    "    \n",
+    "class cls4(cls2, cls3):\n",
+    "    def method1(self):\n",
+    "        return \"method1 from cls4\"\n",
+    "    \n",
+    "\n",
+    "obj4 = cls4()\n",
+    "print(obj4.method1())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "method1 from cls3\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Diamond shape probelm\n",
+    "\n",
+    "class cls1:\n",
+    "    def method1(self):\n",
+    "        return \"method1 from cls1\"\n",
+    "\n",
+    "class cls2(cls1):\n",
+    "    pass\n",
+    "    \n",
+    "class cls3(cls1):\n",
+    "    def method1(self):\n",
+    "        return \"method1 from cls3\"\n",
+    "    \n",
+    "class cls4(cls2, cls3):\n",
+    "    pass\n",
+    "    \n",
+    "\n",
+    "obj4 = cls4()\n",
+    "print(obj4.method1())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature 1 from new feature\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Abstract class and Abstract method\n",
+    "#https://www.geeksforgeeks.org/abstract-classes-in-python/\n",
+    "\n",
+    "\n",
+    "from abc import ABC,abstractmethod\n",
+    "\n",
+    "class base_feature(ABC):\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def feature1(self):\n",
+    "        pass\n",
+    "    \n",
+    "\n",
+    "class new_feature(base_feature):\n",
+    "    \n",
+    "    def feature1(self):\n",
+    "        return \"feature 1 from new feature\"\n",
+    "    \n",
+    "    def feature3(self):\n",
+    "        return \"feature3 from new feature\"\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "obj3 = new_feature()\n",
+    "print(obj3.feature1())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#polymorphism\n",
+    "\n",
+    "#multiple forms\n",
+    "#https://www.geeksforgeeks.org/polymorphism-in-python/\n",
+    "\n",
+    "#polymorhism\n",
+    "\n",
+    "#inbuilt function\n",
+    "\n",
+    "print(len([3,4,5,6,1]))\n",
+    "print(len(\"python\"))\n",
+    "print(len({1:\"hi\", 2:\"hello\", 3:\"welcome\"}))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "160\n"
+     ]
+    }
+   ],
+   "source": [
+    "#user def function\n",
+    "\n",
+    "def example(x, y , z = 100):\n",
+    "    return x + y + z\n",
+    "\n",
+    "print(example(10,20,30))\n",
+    "print(example(5,55))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is new featuere from intro method\n",
+      "This is from base1 base fea\n",
+      "This os from base2 new feature\n"
+     ]
+    }
+   ],
+   "source": [
+    "#class and object\n",
+    "\n",
+    "class base_fea:\n",
+    "    def intro(self):\n",
+    "        return \"This is base feature from intro method\"\n",
+    "    \n",
+    "    def base1(self):\n",
+    "        return \"This is from base1 base fea\"\n",
+    "\n",
+    "class new_feature(base_fea):\n",
+    "    def intro(self):\n",
+    "        return \"This is new featuere from intro method\"\n",
+    "    \n",
+    "    def base2(self):\n",
+    "        return \"This os from base2 new feature\"\n",
+    "    \n",
+    "\n",
+    "obj1 = new_feature()\n",
+    "print(obj1.intro())\n",
+    "print(obj1.base1())\n",
+    "print(obj1.base2())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
