--- a/Pending concepts.ipynb
+++ b/Pending concepts.ipynb
@@ -86,20 +86,20 @@
    ],
    "source": [
     "\n",
-    "def decorator_function(func):\n",
+    "def decorator_function(func): #3\n",
     "    def inner_function():\n",
-    "        print(\"Lines to be executed before func1\")\n",
-    "        func()\n",
-    "        print(\"Lines to be executed after func1\")\n",
-    "    return inner_function\n",
+    "        print(\"Lines to be executed before func1\") #4\n",
+    "        func()  #5\n",
+    "        print(\"Lines to be executed after func1\") #7\n",
+    "    return inner_function   \n",
     "\n",
-    "def func1():\n",
+    "def func1(): #6\n",
     "    print(\"main functionality\")\n",
     "\n",
     "\n",
-    "func1 = decorator_function(func1)\n",
+    "func1 = decorator_function(func1)  #2\n",
     "\n",
-    "func1()\n"
+    "func1()  #1\n"
    ]
   },
   {
@@ -222,6 +222,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -287,10 +305,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Django\n",
+    "#Django #Html/css/\n",
     "\n",
     "#https://docs.djangoproject.com/en/4.0/\n",
     "#https://realpython.com/tutorials/django/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#selenium \n",
+    "#https://selenium-python.readthedocs.io/\n",
+    "\n",
+    "#json json/csv\n",
+    "\n",
+    "https://www.geeksforgeeks.org/python-json/\n",
+    "https://www.geeksforgeeks.org/working-with-json-data-in-python/    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Pandas/numpy ==> excel/ data analysis\n",
+    "\n",
+    "#seaborn/matplotlib/ggplot/bokeh  ===> Visualisation"
    ]
   }
  ],
