--- a/Pending concepts.ipynb
+++ b/Pending concepts.ipynb
@@ -307,6 +307,8 @@
    "source": [
     "#Django #Html/css/\n",
     "\n",
+    "#Flask\n",
+    "\n",
     "#https://docs.djangoproject.com/en/4.0/\n",
     "#https://realpython.com/tutorials/django/"
    ]
